Style: Fixes headshots resizing and jumping on small screens.

--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@include Mixins.mediaQuery(Theme.$phoneViewport) {
+@include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
   .adoptionBanner {
     div.eventHandlerDiv {
       div.buttonText {
