--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,7 +3,8 @@
   h1,
   h2,
   h3,
-  h4 {
+  h4,
+  li {
     @content;
   }
 }
